- Video upload [WIP]  Bug: Script goes to Sleep after a couple of minutes of encoding (formatVideo.sh)
Signed-off-by: Konstantin Bogdanoski <konstantin.b@live.com>